common-applications/test-environment/opengauss-quickissue/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickissue-server
  namespace: opengauss-quickissue
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: server
  type: ClusterIP
