common-applications/test-environment/opengauss-quickissue/server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: quickissue-server-ingress
  namespace: opengauss-quickissue
spec:
  tls:
    - hosts:
        - quickissue-ipb-opengauss.test.osinfra.cn
      secretName: opengauss-quickissue-tls
  rules:
    - host: quickissue-ipb-opengauss.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: quickissue-server
              servicePort: 8080
            path: /
